force-app/main/default/objects/Assessment_Definition_Decision_Signal__c/Assessment_Definition_Decision_Signal__c.object-meta.xml
<CustomObject>
    <label>Assessment Definition Decision Signal</label>
    <nameField>
        <displayFormat>ADS-{00000}</displayFormat>
        <label>Assessment Definition Decision Signal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Definition Decision Signals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>