force-app/main/default/objects/Assessment_Definition_Decision_Signal__c/fields/Assessment_Definition__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Definition</label>
    <referenceTo>Assessment_Definition__c</referenceTo>
    <relationshipLabel>Assessment Definition Decision Signals</relationshipLabel>
    <relationshipName>Assessment_Definition_Decision_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>