force-app/main/default/objects/Assessment_Definition_Decision_Signal__c/fields/Assessment_Definition_Item__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Definition_Item__c</fullName>
    <label>Assessment Definition Item</label>
    <referenceTo>Assessment_Definition_Item__c</referenceTo>
    <relationshipLabel>Assessment Definition Decision Signals</relationshipLabel>
    <relationshipName>Assessment_Definition_Decision_Signals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>